# SA_JEPA

./: .gitignore  main.py  pyproject.toml  requirements.txt  test.ipynb
_context_stuff_deprecated/: SA-JEPA-Plan.md
actual_docs/: goal.md  latest_plan.md  stage_zero.md  stages_overview.md  what.txt
actual_docs/data_pipeline/: overall_path.md
tests/: test_pipeline.py
v0_model_try/: config.py  data_pipeline_v0.py  model.py  sa_jepa_ast_mamba.py
v0_model_try/model/: encoder.py  patch_layer.py
work_journal/: 2026-05-04.md  2026-05-27.md  2026-05-28.md  2026-05-{29,30}.md  2026-06-02.md  2026-06-04.md  2026-06-12.md  2026-07-23.md
